--- a/05-SpinnerMenu/res/layout/main_layout.xml
+++ b/05-SpinnerMenu/res/layout/main_layout.xml
@@ -9,11 +9,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Main" >
 
+    <Spinner
+        android:id="@+id/spinner1"
+        android:background="@color/grey"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp" />
+
     <TextView
-        android:id="@+id/tv1"
-        android:layout_width="170dp"
-        android:layout_height="80dp"
-        android:gravity="center"
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"
