--- a/4-Agenda/res/layout/layout_main.xml
+++ b/4-Agenda/res/layout/layout_main.xml
@@ -1,7 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,39 +12,39 @@
     tools:context=".MainActivity" >
 
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Insertar nombre y telefono en fichero..." />
+        android:text="@string/text_hint"
+        android:textColor="@color/pure_white" />
 
     <EditText
-        android:id="@+id/editText1"
-        android:layout_width="wrap_content"
+        android:id="@+id/name_edt"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
         android:layout_marginTop="24dp"
-        android:ems="10" >
+        android:ems="10"
+        android:inputType="text"
+        android:textColor="@color/pure_white" >
 
         <requestFocus />
     </EditText>
 
     <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
+        android:id="@+id/phone_edt"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_below="@+id/editText1"
         android:layout_marginTop="26dp"
-        android:ems="10" />
+        android:inputType="phone"
+        android:ems="10"
+        android:textColor="@color/pure_white" />
 
     <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_add"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_below="@+id/editText2"
         android:layout_marginTop="34dp"
-        android:text="Insertar" />
+        android:text="@string/btn"
+        android:textColor="@color/pure_white" />
 
-</RelativeLayout>
+</LinearLayout>
